crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__constructor__default_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/default_arguments.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<class Foo at [POINTER]>` expects 0 args but 3 args were passed
   ╭─[craftinginterpreters/test/constructor/default_arguments.lox:3:11]
   │
 3 │ var foo = Foo(1, 2, 3); // expect runtime error: Expected 0 arguments but got 3.
   │           ─┬─  
   │            ╰─── expects 0 arguments
───╯
